fixed gap between msg and footer

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -51,6 +51,7 @@ main section {
     padding: 50px;
     height: 500px;
     box-sizing: border-box;
+    margin-bottom: 100px;
 }
 
 header {
@@ -111,7 +112,8 @@ footer {
     padding: 25px 50px;
     display: flex;
     justify-content: space-around;
-    align-items: center
+    align-items: center;
+    font-size: 15px;
 }
 
 h4 {
@@ -163,6 +165,7 @@ footer h3 a:hover {
 footer .social img {
     padding-top: 15px;
 }
+
 
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
